--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "firebase": "^10.4.0",
+    "formik": "^2.4.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.9.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "sweetalert2": "^11.7.31",
+    "swiper": "^10.3.0",
+    "uuid": "^9.0.1",
+    "yup": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
