--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "cdbreact": "^1.5.18",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
