--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,4 +1,5 @@
 {
   "name": "mobile",
-  "displayName": "mobile"
+  "displayName": "mobile",
+  "icon": "https://i.ibb.co/5jSSZ88/smartphone.png"
 }
