--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
