--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
