--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,7 +27,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-swiper": "^1.6.0"
   },
