--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.8",
@@ -20,6 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-axios": "^0.17.1",
+    "react-native-date-picker": "^4.3.4-alpha.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
