--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts test"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
@@ -24,6 +27,7 @@
     "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-tooltip": "^5.21.5",
     "recharts": "^2.9.0",
