--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-REACT_APP_MONGODB_URL = mongodb+srv://randula98:LbEOPnGhlJDEWJVc@cluster0.euricxe.mongodb.net/construction?retryWrites=true&w=majority
+REACT_APP_MONGODB_URL=mongodb+srv://randula98:LbEOPnGhlJDEWJVc@cluster0.euricxe.mongodb.net/construction?retryWrites=true&w=majority
 REACT_APP_BACKEND_PORT = 8080
 JWT_SECRET = sdar34sfd@asd844684@&^dasd5
