--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha"
+    "test": "mocha --timeout 5000 'tests/**/*.test.js'"
   },
   "author": "Team Tetra",
   "license": "MIT",
@@ -24,6 +24,8 @@
   "devDependencies": {
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
+    "mongodb-memory-server": "^9.0.1",
+    "mongodb-memory-server-global": "^9.0.1",
     "nyc": "^15.1.0"
   }
 }
